efecto taxi is ON

--- a/style.css
+++ b/style.css
@@ -1,4 +1,17 @@
 * {
+	font-size: 50px;
+}
+
+.container {
 	color: gold;
-    font-size: 50px;
+	animation: cambiaColor 2s infinite alternate;
+}
+
+@keyframes cambiaColor {
+	from {
+		color: gold;
+	}
+	to {
+		color: black;
+	}
 }
